<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (C) 2018 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/imageview_detail_x"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:padding="35dp"
        android:scaleType="fitStart"
        app:srcCompat="@mipmap/ic_close"
        tools:layout_editor_absoluteX="10dp"
        android:contentDescription="@string/cd_close_icon" />

    <ImageView
        android:id="@+id/imageview_detail_avatar"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:contentDescription="@string/cd_user_avatar" />

    <TextView
        android:id="@+id/textview_detail_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textview_detail_bio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textview_detail_border"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:background="@color/light_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:gravity="start|center_vertical" >

        <ImageView
            android:id="@+id/textview_detail_login_icon"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/cd_login_name"
            android:padding="27dp"
            android:src="@mipmap/ic_login" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="start|center_vertical" >

            <TextView
                android:id="@+id/textview_detail_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"/>

            <ImageView
                android:id="@+id/textview_detail_admin"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/cd_admin_icon"
                android:scaleType="fitStart"
                android:visibility="gone"
                app:srcCompat="@drawable/icon_staff" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:gravity="start|center_vertical"
        android:contentDescription="@string/cd_linear_layout" >

        <ImageView
            android:id="@+id/textview_detail_location_icon"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/cd_location"
            android:padding="27dp"
            android:src="@mipmap/ic_location" />

        <TextView
            android:id="@+id/textview_detail_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:gravity="start|center_vertical"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/textview_detail_link_icon"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/cd_link"
            android:padding="27dp"
            android:src="@mipmap/ic_link" />

        <TextView
            android:id="@+id/textview_detail_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:autoLink="web|email"/>

    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>